--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+## Discovery properties
+bravodb.discovery.client.self.host=localhost
+bravodb.discovery.client.self.port=8919
+bravodb.discovery.server.self.host=localhost
+bravodb.discovery.server.self.port=8919
+bravodb.discovery.server.other.host=localhost
+bravodb.discovery.server.other.port=8919
