--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -3,59 +3,59 @@ version: '3.7'
 services:
   bravodb1:
     container_name: bravodb1
-    image: bravo/bravodb:0.1
+    image: bravo/bravodb-server:0.1
     restart: always
     environment:
-      - bravodb.discovery.server.self.host=bravodb1
-      - bravodb.discovery.server.self.port=8919
+      - bravodb.server.self.host=bravodb1
+      - bravodb.server.self.port=8919
     networks:
       - bravo-network
 
   bravodb2:
     container_name: bravodb2
-    image: bravo/bravodb:0.1
+    image: bravo/bravodb-server:0.1
     restart: always
     environment:
-      - bravodb.discovery.server.self.host=bravodb2
-      - bravodb.discovery.server.self.port=8919
-      - bravodb.discovery.server.other.host=bravodb1
-      - bravodb.discovery.server.other.port=8919
+      - bravodb.server.self.host=bravodb2
+      - bravodb.server.self.port=8919
+      - bravodb.server.other.host=bravodb1
+      - bravodb.server.other.port=8919
     networks:
       - bravo-network
 
   bravodb3:
     container_name: bravodb3
-    image: bravo/bravodb:0.1
+    image: bravo/bravodb-server:0.1
     restart: always
     environment:
-      - bravodb.discovery.server.self.host=bravodb3
-      - bravodb.discovery.server.self.port=8919
-      - bravodb.discovery.server.other.host=bravodb1
-      - bravodb.discovery.server.other.port=8919
+      - bravodb.server.self.host=bravodb3
+      - bravodb.server.self.port=8919
+      - bravodb.server.other.host=bravodb1
+      - bravodb.server.other.port=8919
     networks:
       - bravo-network
 
   bravodb4:
     container_name: bravodb4
-    image: bravo/bravodb:0.1
+    image: bravo/bravodb-server:0.1
     restart: always
     environment:
-      - bravodb.discovery.server.self.host=bravodb4
-      - bravodb.discovery.server.self.port=8919
-      - bravodb.discovery.server.other.host=bravodb3
-      - bravodb.discovery.server.other.port=8919
+      - bravodb.server.self.host=bravodb4
+      - bravodb.server.self.port=8919
+      - bravodb.server.other.host=bravodb3
+      - bravodb.server.other.port=8919
     networks:
       - bravo-network
 
   bravodb5:
     container_name: bravodb5
-    image: bravo/bravodb:0.1
+    image: bravo/bravodb-server:0.1
     restart: always
     environment:
-      - bravodb.discovery.server.self.host=bravodb5
-      - bravodb.discovery.server.self.port=8919
-      - bravodb.discovery.server.other.host=bravodb3
-      - bravodb.discovery.server.other.port=8919
+      - bravodb.server.self.host=bravodb5
+      - bravodb.server.self.port=8919
+      - bravodb.server.other.host=bravodb3
+      - bravodb.server.other.port=8919
     networks:
       - bravo-network
 
